--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,6 +40,15 @@
         <div class="button-container">
             <a href="/vacancies" class="button">Показать вакансии</a>
         </div>
+        <div class="button-container">
+            <a href="/vacancy-stats" class="button">Показать статистику</a>
+        </div>
+        <div class="button-container">
+            <a href="/export/csv" class="button">Скачать CSV</a>
+        </div>
+        <div class="button-container">
+            <a href="/export/xlsx" class="button">Скачать XLSX</a>
+        </div>
     </div>
 </body>
 </html>
